SWWE gif commit

--- a/interactive-email-infographic.html
+++ b/interactive-email-infographic.html
@@ -95,7 +95,11 @@
             </div>
 
             <div class="page-table-item yellow">
-                  <div class="present">
+                  <div class="presentsmall">
+                  <br><br><br>
+                    <img src="img/portfolio/SWWE/SWWE-2.gif" width="500px" alt="">
+                   </div> 
+                <div class="present">
                     <img src="img/portfolio/SWWE/SWWE-3.jpg" alt="">
                   </div>
             </div>
