--- a/index.html
+++ b/index.html
@@ -162,21 +162,22 @@
                     
                      <div class="col-md-6">
                      <br><br>
-                        I'M REINHARDT KEITH ABUZO – <br><br> <span class=""><span class="theme-color">Interactive</span> and <span class="theme-color"> visual designer</span> based in Dumaguete City, Philippines. 
+                        I'M REINHARDT KEITH ABUZO – <br><br> <div class="description"><span class="theme-color">Interactive</span> and <span class="theme-color"> visual designer</span> based in Dumaguete City, Philippines. 
 
                         <br><br>
                         While some designers jump straight to the visuals, I focus on understanding your goals and your customers’ needs. I enjoy planning user flows, sketching wireframes, and finding effective and appropriate solutions to challenges.
                         <br><br>
+                        Different people have different needs and for every project I make sure the designs addresses the users’ needs.
+                        <br><br>
                         Away from design, I like to hunt for good nonfiction books, watch movies, plan community engagements, and shoot videos and photos.
                         <br><br>
-                        Feel free to reach me for collaborative and freelance projects.</span>
+                        Feel free to reach me for collaborative and freelance projects.
                         <br><br>
-
+</div>
                      </div>
                     <br><br>
                      <div class="col-md-6">                    
-                        TECHNICAL PROFICIENCY </span>
-
+                      TECHNICAL PROFICIENCY
 
 
 
@@ -196,9 +197,12 @@
                     </div>
                 </div>
                         <br>
-                        WORK RELATED SKILLS</span>
-                        <br><br>
+
+                        WORK RELATED SKILLS
+                    <div class="description">
+                        <br>
                         Illustration &nbsp;|&nbsp; SEO Content Writing &nbsp;|&nbsp; Animation &nbsp;|&nbsp; Architectural Visualization &nbsp;|&nbsp; 3D Modeling &nbsp;|&nbsp; Social Media Content Creation &nbsp;|&nbsp; Project Management &nbsp;|&nbsp; Photography &nbsp;|&nbsp; Video and Sound Production &nbsp;|&nbsp; Event and Technical Direction
+                    </div>
                      </div>
 
                     <br><br><br><br>
