--- a/TPH/index.html
+++ b/TPH/index.html
@@ -88,16 +88,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <p>Suggested orientation: Portrait (1080x1920) works best for email</p>
      <p id="u3683-4">(Click image to view actual size)</p>
     </div>
-    <div class="zoom clip_frame colelem" id="u3613"><!-- image -->
-     <img class="block" id="u3613_img" src="images/birthday-greeting-portrait.jpg?crc=513738541" alt="" title="Open image in a new window" width="830" height="1476"/>
-    </div>
+    <a class="nonblock nontext zoom clip_frame colelem" id="u3613" href="https://rkbabuzo.github.io/TPH/images/Birthday-Greeting-Portrait-HR.png" target="_blank"><!-- image --><img class="block" id="u3613_img" src="images/birthday-greeting-portrait.jpg?crc=513738541" alt="" title="Open image in a new window" width="830" height="1476"/></a>
     <div class="Body clearfix colelem" id="u3693-6"><!-- content -->
      <p>Landscape (1920x1080)</p>
      <p id="u3693-4">(Click image to view actual size)</p>
     </div>
-    <div class="clip_frame colelem" id="u3623"><!-- image -->
-     <img class="block" id="u3623_img" src="images/birthday-greeting-landscape.jpg?crc=502394308" alt="" title="Open image in a new window" width="1160" height="653"/>
-    </div>
+    <a class="nonblock nontext clip_frame colelem" id="u3623" href="https://rkbabuzo.github.io/TPH/images/Birthday-Greeting-Landscape-HR.png" target="_blank"><!-- image --><img class="block" id="u3623_img" src="images/birthday-greeting-landscape.jpg?crc=502394308" alt="" title="Open image in a new window" width="1160" height="653"/></a>
     <a class="anchor_item colelem" id="newsletter-designs"></a>
     <div class="clearfix colelem" id="u3579-4"><!-- content -->
      <p>NEWSLETTER DESIGN:</p>
@@ -119,10 +115,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix colelem" id="pu3668"><!-- group -->
      <div class="clip_frame grpelem" id="u3668"><!-- image -->
-      <img class="block" id="u3668_img" src="images/tph-newsletter-concept-2.png?crc=534891816" alt="" width="420" height="676"/>
+      <img class="block" id="u3668_img" src="images/tph-newsletter-concept-1.png?crc=534891816" alt="" width="420" height="676"/>
      </div>
      <div class="clip_frame grpelem" id="u3704"><!-- image -->
-      <img class="block" id="u3704_img" src="images/virtual-selfie-12.gif?crc=503479699" alt="" width="260" height="191"/>
+      <img class="block" id="u3704_img" src="images/virtual-selfie-1.gif?crc=503479699" alt="" width="260" height="191"/>
      </div>
      <a class="nonblock nontext Button rounded-corners clearfix grpelem" id="buttonu3718" href="newsletter.html" target="_blank"><!-- container box --><div class="clearfix grpelem" id="u3720-4"><!-- content --><p>SEE WHAT'S ON</p></div></a>
     </div>
@@ -130,9 +126,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <p id="u3741-2">Concept 2: Regular Email Newsletter</p>
      <p id="u3741-4">(Click image to enlarge)</p>
     </div>
-    <div class="clip_frame colelem" id="u3731"><!-- image -->
-     <img class="block" id="u3731_img" src="images/tph-newsletter-concept-22.png?crc=316860429" alt="" width="532" height="2048"/>
-    </div>
+    <a class="nonblock nontext clip_frame colelem" id="u3731" href="https://rkbabuzo.github.io/TPH/images/TPH-Newsletter-Concept-2-%20HR.png" target="_blank"><!-- image --><img class="block" id="u3731_img" src="images/tph-newsletter-concept-2.png?crc=316860429" alt="" width="532" height="2048"/></a>
     <div class="clearfix colelem" id="u3744-4"><!-- content -->
      <p>NEWS LETTER DESIGN NOTES:</p>
     </div>
