--- a/TPH/newsletter.html
+++ b/TPH/newsletter.html
@@ -1030,11 +1030,7 @@ body {
          <p id="u2704-6">- Tucker Dale</p>
         </div>
        </div>
-       <div class="Button rounded-corners clearfix colelem" id="buttonu2717"><!-- container box -->
-        <div class="clearfix grpelem" id="u2718-4"><!-- content -->
-         <p>READ MORE ABOUT TUCKER</p>
-        </div>
-       </div>
+       <a class="nonblock nontext Button rounded-corners clearfix colelem" id="buttonu2717" href="https://www.thumbtack.com/blog/top-pro-tucker-dale/" target="_blank"><!-- container box --><div class="clearfix grpelem" id="u2718-4"><!-- content --><p>READ MORE ABOUT TUCKER</p></div></a>
       </div>
      </div>
     </div>
@@ -1078,11 +1074,7 @@ body {
         <div class="clearfix colelem" id="u2954-4"><!-- content -->
          <p>Stressed out from work? Try slipping in these three simple yoga poses from a Thumbtack pro throughout the day to regain your strength and energy.</p>
         </div>
-        <div class="Button rounded-corners clearfix colelem" id="buttonu2948"><!-- container box -->
-         <div class="clearfix grpelem" id="u2949-4"><!-- content -->
-          <p>LEARN MORE ABOUT THESE YOGA POSES</p>
-         </div>
-        </div>
+        <a class="nonblock nontext Button rounded-corners clearfix colelem" id="buttonu2948" href="https://www.thumbtack.com/blog/three-yoga-poses/" target="_blank"><!-- container box --><div class="clearfix grpelem" id="u2949-4"><!-- content --><p>LEARN MORE ABOUT THESE YOGA POSES</p></div></a>
        </div>
       </div>
      </div>
