--- a/TPH/index.html
+++ b/TPH/index.html
@@ -118,7 +118,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <img class="block" id="u3668_img" src="images/tph-newsletter-concept-1.png?crc=534891816" alt="" width="420" height="676"/>
      </div>
      <div class="clip_frame grpelem" id="u3704"><!-- image -->
-      <img class="block" id="u3704_img" src="images/virtual-selfie-1.gif?crc=503479699" alt="" width="260" height="191"/>
+      <img class="block" id="u3704_img" src="images/virtual-selfie-12.gif?crc=503479699" alt="" width="260" height="191"/>
      </div>
      <a class="nonblock nontext Button rounded-corners clearfix grpelem" id="buttonu3718" href="newsletter.html" target="_blank"><!-- container box --><div class="clearfix grpelem" id="u3720-4"><!-- content --><p>SEE WHAT'S ON</p></div></a>
     </div>
