--- a/TPH/index.html
+++ b/TPH/index.html
@@ -16,9 +16,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4009538864"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=58763326" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=444304970" id="pagesheet"/>
     <!--custom head HTML-->
-  <style>  body {    text-rendering:optimizeLegibility;    -webkit-font-smoothing: antialiased;    -moz-font-smoothing: grayscale;}</style>
+  <style>  
+body {
+    text-rendering:optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-font-smoothing: grayscale;
+}
+</style>
   <!--/*
 
 */
