--- a/index.html
+++ b/index.html
@@ -121,6 +121,20 @@
 
                     <div class="portfolio-item">
                         <div class="thumb">
+                            <img src="img/portfolio/6.jpg" alt="">
+                            <div class="portfolio-hover">
+
+                                <div class="portfolio-description">
+                                    <h4><a href="achievements.html">Achievement Cards</a></h4>
+                                    <p><a href="achievements.html">Social Media</a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="portfolio-item">
+                        <div class="thumb">
                             <img src="img/portfolio/4.jpg" alt="">
                             <div class="portfolio-hover">
 
@@ -146,6 +160,7 @@
                         </div>
                     </div>
 
+
                 </div>
             </div>
                     
@@ -165,7 +180,7 @@
                         I'M REINHARDT KEITH ABUZO – <br><br> <div class="description"><span class="theme-color">Interactive</span> and <span class="theme-color"> visual designer</span> based in Dumaguete City, Philippines. 
 
                         <br><br>
-                        While some designers jump straight to the visuals, I focus on understanding your goals and your customers’ needs. I enjoy planning user flows, sketching wireframes, and finding effective and appropriate solutions to challenges.
+                        While some designers jump straight to visuals, I focus on understanding your goals and your customers’ needs. I enjoy planning user flows, sketching wireframes, and finding effective and appropriate solutions to challenges.
                         <br><br>
                         Different people have different needs and for every project I make sure the designs addresses the users’ needs.
                         <br><br>
