--- a/hho/index.html
+++ b/hho/index.html
@@ -70,36 +70,41 @@ body {
     <div class="clearfix grpelem" id="u277-66"><!-- content -->
      <p id="u277-2">02</p>
      <p id="u277-4"><span class="h1" id="u277-3">Potential Design Problems:</span></p>
-     <p id="u277-6">- Users are won't be able to quickly find specific information.</p>
-     <p id="u277-8">- Generic website design doesn’t inspire confidence among users.</p>
+     <p id="u277-6">- Users won't be able to quickly find specific information. Generic website design is indistiguishable from other competitors.</p>
+     <p id="u277-8">- Lack of design elements that promote user engagement.</p>
      <p id="u277-9">&nbsp;</p>
      <p id="u277-10">&nbsp;</p>
      <p id="u277-12">03</p>
      <p id="u277-14"><span class="h1" id="u277-13">PROJECT Objectives:</span></p>
      <ol class="list0 nls-None" id="u277-21">
-      <li id="u277-16">Inspire trust and credibility among new customers through simple and attractive interface and well-organized information.</li>
-      <li id="u277-18">Provide an exceptional user experience through intuitive navigation and supportive design.</li>
-      <li id="u277-20">Help users easily make purchasing decision from the information provided on healthyhempoil.com without referring to other websites and search engines.</li>
+      <li id="u277-16">Promote user engagement and boost website credibility through attractive branded imagery and well-organized content.</li>
+      <li id="u277-18">Provide an exceptional user experience through simple interface, intuitive navigation, and supportive design elements.</li>
+      <li id="u277-20">Help users easily make purchasing decision from the information provided on healthyhempoil.com–without referring to other websites and search engines.</li>
      </ol>
      <p id="u277-22">&nbsp;</p>
      <p id="u277-24"><span class="h1" id="u277-23">Strategies &amp; ACTION STEPS:</span></p>
-     <p id="u277-26">1. Create a strong brand presence:</p>
+
+      <p id="u277-42">1. Provide easily-discoverable social proof and CBD-related information:</p>
+     <ul class="list0 nls-None" id="u277-49">
+      <li id="u277-44">Make social media and customer review link more noticeable</li>
+      <li id="u277-46">Add a “how to”, "help" or a “guide” links and banner images to the home page</li>
+      <li id="u277-48">Add engaging content to the website (infographics, tutorials, promo/discount banners, etc.)</li>
+     </ul>
+
+
+     <p id="u277-26">2. Create a strong brand presence:</p>
      <ul class="list0 nls-None" id="u277-33">
       <li id="u277-28">Utilize up-to-date website design trends and principles.</li>
-      <li id="u277-30">Use photos that convey an obvious connection to the content. Avoid cheesy or generic-looking stock photos.</li>
+      <li id="u277-30">Use photos and images that convey an obvious connection to the content. Avoid cheesy or generic-looking stock photos.</li>
       <li id="u277-32">Create relevant seasonal and product banner images that promote content.</li>
      </ul>
-     <p id="u277-35">2. Make users feel more secure:</p>
+
+     <p id="u277-35">3. Make users feel more secure:</p>
      <ul class="list0 nls-None" id="u277-40">
       <li id="u277-37">Utilize graphic elements such as security and guarantee badges in the homepage. This includes the secure payment, money back guarantee, and GMP logos.</li>
       <li id="u277-39">Make key product features prominent, this includes “100% Natural”, “Tested by…”, and&nbsp; GMP logo.</li>
      </ul>
-     <p id="u277-42">3. Provide easily-discoverable social proof and CBD-related information:</p>
-     <ul class="list0 nls-None" id="u277-49">
-      <li id="u277-44">Make social media and customer review link more noticeable</li>
-      <li id="u277-46">Add a “how to” or a “guide” link to the home page</li>
-      <li id="u277-48">Add an infographics link to the blog page</li>
-     </ul>
+     
      <p id="u277-50">&nbsp;</p>
      <p id="u277-51">&nbsp;</p>
      <p id="u277-53">04</p>
