--- a/hho/index.html
+++ b/hho/index.html
@@ -221,7 +221,7 @@ body {
          </ul>
         </div>
         <div class="rounded-corners clip_frame colelem" id="u2028"><!-- image -->
-         <img class="block" id="u2028_img" src="images/product-typography-layout.png?crc=3976390841" alt="" width="391" height="221"/>
+         <img class="block" id="u2028_img" src="images/product-typography-layout.jpg?crc=3976390841" alt="" width="391" height="221"/>
         </div>
        </div>
       </div>
